css tweaks to modal card to ensure better alignment and prevent eventprop

--- a/src/components/GifModal/GifModal.css
+++ b/src/components/GifModal/GifModal.css
@@ -11,7 +11,6 @@
   align-items: center;
 }
 .copyTextArea {
-  width: 90%;
   display: flex;
   text-align: center;
   overflow: auto;
@@ -19,8 +18,14 @@
   border: none;
   box-shadow: none;
   resize: none;
-  background: rgba(255, 255, 255, 0)
+  background: rgba(255, 255, 255, 0);
+  width: 100%;
+
 }
 .gifModalCard{
   background: white;
+  display: flex;
+  text-align: center;
+  flex-direction: column;
+  
 }
